@@ -27,6 +27,7 @@
  */
 package org.hisp.dhis.analytics.table;
 
+import static java.time.LocalDate.now;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -49,13 +50,16 @@ import static org.hisp.dhis.analytics.ColumnDataType.GEOMETRY_POINT;
 import static org.hisp.dhis.analytics.ColumnDataType.INTEGER;
 import static org.hisp.dhis.analytics.ColumnDataType.TEXT;
 import static org.hisp.dhis.analytics.ColumnDataType.TIMESTAMP;
-import static org.hisp.dhis.resourcetable.ResourceTable.LATEST_YEAR_SUPPORTED;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Lists;
+import com.google.common.collect.Sets;
 import java.time.LocalDate;
+import java.time.Year;
 import java.time.ZoneId;
 import java.util.Collections;
 import java.util.Date;
@@ -64,7 +68,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
-
 import org.hisp.dhis.analytics.AggregationType;
 import org.hisp.dhis.analytics.AnalyticsExportSettings;
 import org.hisp.dhis.analytics.AnalyticsTable;
@@ -90,6 +93,7 @@ import org.hisp.dhis.jdbc.statementbuilder.PostgreSQLStatementBuilder;
 import org.hisp.dhis.organisationunit.OrganisationUnitGroupSet;
 import org.hisp.dhis.organisationunit.OrganisationUnitLevel;
 import org.hisp.dhis.organisationunit.OrganisationUnitService;
+import org.hisp.dhis.period.PeriodDataProvider;
 import org.hisp.dhis.period.PeriodType;
 import org.hisp.dhis.program.Program;
 import org.hisp.dhis.program.ProgramStage;
@@ -110,601 +114,805 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.jdbc.core.JdbcTemplate;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Sets;
-
 /**
  * @author Luciano Fiandesio
  */
-@ExtendWith( MockitoExtension.class )
-class JdbcEventAnalyticsTableManagerTest
-{
+@ExtendWith(MockitoExtension.class)
+class JdbcEventAnalyticsTableManagerTest {
 
-    @Mock
-    private IdentifiableObjectManager idObjectManager;
+  @Mock private IdentifiableObjectManager idObjectManager;
 
-    @Mock
-    private OrganisationUnitService organisationUnitService;
+  @Mock private OrganisationUnitService organisationUnitService;
 
-    @Mock
-    private CategoryService categoryService;
+  @Mock private CategoryService categoryService;
 
-    private StatementBuilder statementBuilder;
+  private StatementBuilder statementBuilder;
 
-    @Mock
-    private SystemSettingManager systemSettingManager;
+  @Mock private SystemSettingManager systemSettingManager;
 
-    @Mock
-    private DatabaseInfo databaseInfo;
+  @Mock private DatabaseInfo databaseInfo;
 
-    @Mock
-    private JdbcTemplate jdbcTemplate;
+  @Mock private JdbcTemplate jdbcTemplate;
 
-    @Mock
-    private AnalyticsExportSettings analyticsExportSettings;
+  @Mock private AnalyticsExportSettings analyticsExportSettings;
 
-    private JdbcEventAnalyticsTableManager subject;
+  @Mock private PeriodDataProvider periodDataProvider;
 
-    private Date today;
+  private JdbcEventAnalyticsTableManager subject;
 
-    private static final Date START_TIME = new DateTime( 2019, 8, 1, 0, 0 ).toDate();
+  private Date today;
 
-    private final static String TABLE_PREFIX = "analytics_event_";
+  private static final Date START_TIME = new DateTime(2019, 8, 1, 0, 0).toDate();
 
-    private static final String FROM_CLAUSE = "from programstageinstance where programstageinstanceid=psi.programstageinstanceid";
+  private static final String TABLE_PREFIX = "analytics_event_";
 
-    private List<AnalyticsTableColumn> periodColumns = PeriodType.getAvailablePeriodTypes().stream().map( pt -> {
-        String column = quote( pt.getName().toLowerCase() );
-        return new AnalyticsTableColumn( column, TEXT, "dps" + "." + column );
-    } ).collect( Collectors.toList() );
+  private static final String FROM_CLAUSE =
+      "from programstageinstance where programstageinstanceid=psi.programstageinstanceid";
 
-    private final BeanRandomizer rnd = BeanRandomizer.create();
+  private List<AnalyticsTableColumn> periodColumns =
+      PeriodType.getAvailablePeriodTypes().stream()
+          .map(
+              pt -> {
+                String column = quote(pt.getName().toLowerCase());
+                return new AnalyticsTableColumn(column, TEXT, "dps" + "." + column);
+              })
+          .collect(Collectors.toList());
 
-    @BeforeEach
-    public void setUp()
-    {
-        statementBuilder = new PostgreSQLStatementBuilder();
+  private final BeanRandomizer rnd = BeanRandomizer.create();
 
-        today = Date.from( LocalDate.of( 2019, 7, 6 ).atStartOfDay( ZoneId.systemDefault() ).toInstant() );
+  @BeforeEach
+  public void setUp() {
+    statementBuilder = new PostgreSQLStatementBuilder();
 
-        subject = new JdbcEventAnalyticsTableManager( idObjectManager, organisationUnitService, categoryService,
-            systemSettingManager, mock( DataApprovalLevelService.class ), mock( ResourceTableService.class ),
-            mock( AnalyticsTableHookService.class ), statementBuilder, mock( PartitionManager.class ), databaseInfo,
-            jdbcTemplate, analyticsExportSettings );
-    }
+    today = Date.from(LocalDate.of(2019, 7, 6).atStartOfDay(ZoneId.systemDefault()).toInstant());
 
-    @Test
-    void verifyTableType()
-    {
-        assertThat( subject.getAnalyticsTableType(), is( AnalyticsTableType.EVENT ) );
-    }
+    subject =
+        new JdbcEventAnalyticsTableManager(
+            idObjectManager,
+            organisationUnitService,
+            categoryService,
+            systemSettingManager,
+            mock(DataApprovalLevelService.class),
+            mock(ResourceTableService.class),
+            mock(AnalyticsTableHookService.class),
+            statementBuilder,
+            mock(PartitionManager.class),
+            databaseInfo,
+            jdbcTemplate,
+            analyticsExportSettings,
+            periodDataProvider);
+  }
 
-    @Test
-    void verifyGetLatestAnalyticsTables()
-    {
-        Program prA = createProgram( 'A' );
-        Program prB = createProgram( 'B' );
-        Program prC = createProgram( 'C' );
-        Program prD = createProgram( 'D' );
-        List<Program> programs = Lists.newArrayList( prA, prB, prC, prD );
+  @Test
+  void verifyTableType() {
+    assertThat(subject.getAnalyticsTableType(), is(AnalyticsTableType.EVENT));
+  }
 
-        Date lastFullTableUpdate = new DateTime( 2019, 3, 1, 2, 0 ).toDate();
-        Date lastLatestPartitionUpdate = new DateTime( 2019, 3, 1, 9, 0 ).toDate();
-        Date startTime = new DateTime( 2019, 3, 1, 10, 0 ).toDate();
+  @Test
+  void verifyGetLatestAnalyticsTables() {
+    Program prA = createProgram('A');
+    Program prB = createProgram('B');
+    Program prC = createProgram('C');
+    Program prD = createProgram('D');
+    List<Program> programs = Lists.newArrayList(prA, prB, prC, prD);
 
-        Set<String> skipPrograms = new HashSet<>();
-        skipPrograms.add( prC.getUid() );
-        skipPrograms.add( prD.getUid() );
+    Date lastFullTableUpdate = new DateTime(2019, 3, 1, 2, 0).toDate();
+    Date lastLatestPartitionUpdate = new DateTime(2019, 3, 1, 9, 0).toDate();
+    Date startTime = new DateTime(2019, 3, 1, 10, 0).toDate();
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withStartTime( startTime )
-            .withLatestPartition().withSkipPrograms( skipPrograms ).build();
+    Set<String> skipPrograms = new HashSet<>();
+    skipPrograms.add(prC.getUid());
+    skipPrograms.add(prD.getUid());
 
-        List<Map<String, Object>> queryResp = Lists.newArrayList();
-        queryResp.add( ImmutableMap.of( "dataelementid", 1 ) );
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder()
+            .withStartTime(startTime)
+            .withLatestPartition()
+            .withSkipPrograms(skipPrograms)
+            .build();
 
-        when( systemSettingManager.getDateSetting( SettingKey.LAST_SUCCESSFUL_ANALYTICS_TABLES_UPDATE ) )
-            .thenReturn( lastFullTableUpdate );
-        when( systemSettingManager.getDateSetting( SettingKey.LAST_SUCCESSFUL_LATEST_ANALYTICS_PARTITION_UPDATE ) )
-            .thenReturn( lastLatestPartitionUpdate );
-        when( jdbcTemplate.queryForList( Mockito.anyString() ) ).thenReturn( queryResp );
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( programs );
+    List<Map<String, Object>> queryResp = Lists.newArrayList();
+    queryResp.add(ImmutableMap.of("dataelementid", 1));
 
-        List<AnalyticsTable> tables = subject.getAnalyticsTables( params );
-        assertThat( tables, hasSize( 2 ) );
+    when(systemSettingManager.getDateSetting(SettingKey.LAST_SUCCESSFUL_ANALYTICS_TABLES_UPDATE))
+        .thenReturn(lastFullTableUpdate);
+    when(systemSettingManager.getDateSetting(
+            SettingKey.LAST_SUCCESSFUL_LATEST_ANALYTICS_PARTITION_UPDATE))
+        .thenReturn(lastLatestPartitionUpdate);
+    when(jdbcTemplate.queryForList(Mockito.anyString())).thenReturn(queryResp);
+    when(idObjectManager.getAllNoAcl(Program.class)).thenReturn(programs);
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
 
-        AnalyticsTable tableA = tables.get( 0 );
-        AnalyticsTable tableB = tables.get( 1 );
+    List<AnalyticsTable> tables = subject.getAnalyticsTables(params);
+    assertThat(tables, hasSize(2));
 
-        assertThat( tableA, notNullValue() );
-        assertThat( tableB, notNullValue() );
+    AnalyticsTable tableA = tables.get(0);
+    AnalyticsTable tableB = tables.get(1);
 
-        AnalyticsTablePartition partitionA = tableA.getLatestPartition();
-        AnalyticsTablePartition partitionB = tableA.getLatestPartition();
+    assertThat(tableA, notNullValue());
+    assertThat(tableB, notNullValue());
 
-        assertThat( partitionA, notNullValue() );
-        assertThat( partitionA.isLatestPartition(), equalTo( true ) );
-        assertThat( partitionA.getStartDate(), equalTo( lastFullTableUpdate ) );
-        assertThat( partitionA.getEndDate(), equalTo( startTime ) );
+    AnalyticsTablePartition partitionA = tableA.getLatestPartition();
+    AnalyticsTablePartition partitionB = tableA.getLatestPartition();
 
-        assertThat( partitionB, notNullValue() );
-        assertThat( partitionB.isLatestPartition(), equalTo( true ) );
-        assertThat( partitionB.getStartDate(), equalTo( lastFullTableUpdate ) );
-        assertThat( partitionB.getEndDate(), equalTo( startTime ) );
-    }
+    assertThat(partitionA, notNullValue());
+    assertThat(partitionA.isLatestPartition(), equalTo(true));
+    assertThat(partitionA.getStartDate(), equalTo(lastFullTableUpdate));
+    assertThat(partitionA.getEndDate(), equalTo(startTime));
 
-    @Test
-    void verifyGetTableWithCategoryCombo()
-    {
-        Program program = createProgram( 'A' );
+    assertThat(partitionB, notNullValue());
+    assertThat(partitionB.isLatestPartition(), equalTo(true));
+    assertThat(partitionB.getStartDate(), equalTo(lastFullTableUpdate));
+    assertThat(partitionB.getEndDate(), equalTo(startTime));
+  }
 
-        Category categoryA = createCategory( 'A' );
-        categoryA.setCreated( getDate( 2019, 12, 3 ) );
-        Category categoryB = createCategory( 'B' );
-        categoryA.setCreated( getDate( 2018, 8, 5 ) );
-        CategoryCombo categoryCombo = createCategoryCombo( 'B', categoryA, categoryB );
+  @Test
+  void verifyGetTableWithCategoryCombo() {
+    Program program = createProgram('A');
 
-        addCategoryCombo( program, categoryCombo );
+    Category categoryA = createCategory('A');
+    categoryA.setCreated(getDate(2019, 12, 3));
+    Category categoryB = createCategory('B');
+    categoryA.setCreated(getDate(2018, 8, 5));
+    CategoryCombo categoryCombo = createCategoryCombo('B', categoryA, categoryB);
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Lists.newArrayList( program ) );
+    addCategoryCombo(program, categoryCombo);
 
-        when( jdbcTemplate.queryForList(
-            getYearQueryForCurrentYear( program, true ),
-            Integer.class ) ).thenReturn( Lists.newArrayList( 2018, 2019 ) );
+    when(idObjectManager.getAllNoAcl(Program.class)).thenReturn(Lists.newArrayList(program));
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withLastYears( 2 )
-            .withStartTime( START_TIME ).withToday( today ).build();
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
 
-        List<AnalyticsTable> tables = subject.getAnalyticsTables( params );
+    when(jdbcTemplate.queryForList(
+            getYearQueryForCurrentYear(program, true, availableDataYears), Integer.class))
+        .thenReturn(Lists.newArrayList(2018, 2019));
 
-        assertThat( tables, hasSize( 1 ) );
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder()
+            .withLastYears(2)
+            .withStartTime(START_TIME)
+            .withToday(today)
+            .build();
 
-        new AnalyticsTableAsserter.Builder( tables.get( 0 ) )
-            .withTableType( AnalyticsTableType.EVENT )
-            .withTableName( TABLE_PREFIX + program.getUid().toLowerCase() )
-            .withColumnSize( 55 )
-            .withDefaultColumns( subject.getFixedColumns() )
-            .addColumns( periodColumns )
-            .addColumn( categoryA.getUid(), CHARACTER_11, "acs.", categoryA.getCreated() )
-            .addColumn( categoryB.getUid(), CHARACTER_11, "acs.", categoryB.getCreated() ).build().verify();
-    }
+    List<AnalyticsTable> tables = subject.getAnalyticsTables(params);
 
-    @Test
-    void verifyGetTableWithDataElements()
-    {
-        when( databaseInfo.isSpatialSupport() ).thenReturn( true );
-        Program program = createProgram( 'A' );
+    assertThat(tables, hasSize(1));
 
-        DataElement d1 = createDataElement( 'Z', ValueType.TEXT, AggregationType.SUM );
-        DataElement d2 = createDataElement( 'P', ValueType.PERCENTAGE, AggregationType.SUM );
-        DataElement d3 = createDataElement( 'Y', ValueType.BOOLEAN, AggregationType.NONE );
-        DataElement d4 = createDataElement( 'W', ValueType.DATE, AggregationType.LAST );
-        DataElement d5 = createDataElement( 'G', ValueType.ORGANISATION_UNIT, AggregationType.NONE );
-        DataElement d6 = createDataElement( 'H', ValueType.INTEGER, AggregationType.SUM );
-        DataElement d7 = createDataElement( 'U', ValueType.COORDINATE, AggregationType.NONE );
+    new AnalyticsTableAsserter.Builder(tables.get(0))
+        .withTableType(AnalyticsTableType.EVENT)
+        .withTableName(TABLE_PREFIX + program.getUid().toLowerCase())
+        .withColumnSize(56)
+        .withDefaultColumns(subject.getFixedColumns())
+        .addColumns(periodColumns)
+        .addColumn(categoryA.getUid(), CHARACTER_11, "acs.", categoryA.getCreated())
+        .addColumn(categoryB.getUid(), CHARACTER_11, "acs.", categoryB.getCreated())
+        .build()
+        .verify();
+  }
 
-        ProgramStage ps1 = createProgramStage( 'A', Sets.newHashSet( d1, d2, d3, d4, d5, d6, d7 ) );
+  @Test
+  void verifyGetTableWithDataElements() {
+    when(databaseInfo.isSpatialSupport()).thenReturn(true);
+    Program program = createProgram('A');
 
-        program.setProgramStages( Sets.newHashSet( ps1 ) );
+    DataElement d1 = createDataElement('Z', ValueType.TEXT, AggregationType.SUM);
+    DataElement d2 = createDataElement('P', ValueType.PERCENTAGE, AggregationType.SUM);
+    DataElement d3 = createDataElement('Y', ValueType.BOOLEAN, AggregationType.NONE);
+    DataElement d4 = createDataElement('W', ValueType.DATE, AggregationType.LAST);
+    DataElement d5 = createDataElement('G', ValueType.ORGANISATION_UNIT, AggregationType.NONE);
+    DataElement d6 = createDataElement('H', ValueType.INTEGER, AggregationType.SUM);
+    DataElement d7 = createDataElement('U', ValueType.COORDINATE, AggregationType.NONE);
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Lists.newArrayList( program ) );
+    ProgramStage ps1 = createProgramStage('A', Sets.newHashSet(d1, d2, d3, d4, d5, d6, d7));
 
-        String aliasD1 = "(select eventdatavalues #>> '{%s, value}' " + FROM_CLAUSE + " ) as \"%s\"";
-        String aliasD2 = "(select cast(eventdatavalues #>> '{%s, value}' as " + statementBuilder.getDoubleColumnType()
-            + ") " + FROM_CLAUSE + "  and eventdatavalues #>> '{%s,value}' " + statementBuilder.getRegexpMatch()
+    program.setProgramStages(Sets.newHashSet(ps1));
+
+    when(idObjectManager.getAllNoAcl(Program.class)).thenReturn(Lists.newArrayList(program));
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
+
+    String aliasD1 = "(select eventdatavalues #>> '{%s, value}' " + FROM_CLAUSE + " ) as \"%s\"";
+    String aliasD2 =
+        "(select cast(eventdatavalues #>> '{%s, value}' as "
+            + statementBuilder.getDoubleColumnType()
+            + ") "
+            + FROM_CLAUSE
+            + "  and eventdatavalues #>> '{%s,value}' "
+            + statementBuilder.getRegexpMatch()
             + " '^(-?[0-9]+)(\\.[0-9]+)?$') as \"%s\"";
-        String aliasD3 = "(select case when eventdatavalues #>> '{%s, value}' = 'true' then 1 when eventdatavalues #>> '{%s, value}' = 'false' then 0 else null end "
-            + FROM_CLAUSE + " ) as \"%s\"";
-        String aliasD4 = "(select cast(eventdatavalues #>> '{%s, value}' as timestamp) " + FROM_CLAUSE
-            + "  and eventdatavalues #>> '{%s,value}' " + statementBuilder.getRegexpMatch()
+    String aliasD3 =
+        "(select case when eventdatavalues #>> '{%s, value}' = 'true' then 1 when eventdatavalues #>> '{%s, value}' = 'false' then 0 else null end "
+            + FROM_CLAUSE
+            + " ) as \"%s\"";
+    String aliasD4 =
+        "(select cast(eventdatavalues #>> '{%s, value}' as timestamp) "
+            + FROM_CLAUSE
+            + "  and eventdatavalues #>> '{%s,value}' "
+            + statementBuilder.getRegexpMatch()
             + " '^\\d{4}-\\d{2}-\\d{2}(\\s|T)?((\\d{2}:)(\\d{2}:)?(\\d{2}))?(|.(\\d{3})|.(\\d{3})Z)?$') as \"%s\"";
-        String aliasD5 = "(select ou.uid from organisationunit ou where ou.uid = " + "(select eventdatavalues #>> '{"
-            + d5.getUid() + ", value}' " + FROM_CLAUSE + " )) as \"" + d5.getUid() + "\"";
-        String aliasD6 = "(select cast(eventdatavalues #>> '{%s, value}' as bigint) " + FROM_CLAUSE
-            + "  and eventdatavalues #>> '{%s,value}' " + statementBuilder.getRegexpMatch()
+    String aliasD5 =
+        "(select ou.uid from organisationunit ou where ou.uid = "
+            + "(select eventdatavalues #>> '{"
+            + d5.getUid()
+            + ", value}' "
+            + FROM_CLAUSE
+            + " )) as \""
+            + d5.getUid()
+            + "\"";
+    String aliasD6 =
+        "(select cast(eventdatavalues #>> '{%s, value}' as bigint) "
+            + FROM_CLAUSE
+            + "  and eventdatavalues #>> '{%s,value}' "
+            + statementBuilder.getRegexpMatch()
             + " '^(-?[0-9]+)(\\.[0-9]+)?$') as \"%s\"";
-        String aliasD7 = "(select ST_GeomFromGeoJSON('{\"type\":\"Point\", \"coordinates\":' || (eventdatavalues #>> '{%s, value}') || ', \"crs\":{\"type\":\"name\", \"properties\":{\"name\":\"EPSG:4326\"}}}') from programstageinstance where programstageinstanceid=psi.programstageinstanceid ) as \"%s\"";
-        String aliasD5_geo = "(select ou.geometry from organisationunit ou where ou.uid = (select eventdatavalues #>> '{"
-            + d5.getUid() + ", value}' " + FROM_CLAUSE + " )) as \"" + d5.getUid() + "\"";
-        String aliasD5_name = "(select ou.name from organisationunit ou where ou.uid = (select eventdatavalues #>> '{"
-            + d5.getUid() + ", value}' " + FROM_CLAUSE + " )) as \"" + d5.getUid() + "\"";
+    String aliasD7 =
+        "(select ST_GeomFromGeoJSON('{\"type\":\"Point\", \"coordinates\":' || (eventdatavalues #>> '{%s, value}') || ', \"crs\":{\"type\":\"name\", \"properties\":{\"name\":\"EPSG:4326\"}}}') from programstageinstance where programstageinstanceid=psi.programstageinstanceid ) as \"%s\"";
+    String aliasD5_geo =
+        "(select ou.geometry from organisationunit ou where ou.uid = (select eventdatavalues #>> '{"
+            + d5.getUid()
+            + ", value}' "
+            + FROM_CLAUSE
+            + " )) as \""
+            + d5.getUid()
+            + "\"";
+    String aliasD5_name =
+        "(select ou.name from organisationunit ou where ou.uid = (select eventdatavalues #>> '{"
+            + d5.getUid()
+            + ", value}' "
+            + FROM_CLAUSE
+            + " )) as \""
+            + d5.getUid()
+            + "\"";
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withLastYears( 2 )
-            .withStartTime( START_TIME ).withToday( today ).build();
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder()
+            .withLastYears(2)
+            .withStartTime(START_TIME)
+            .withToday(today)
+            .build();
 
-        when( jdbcTemplate.queryForList(
-            getYearQueryForCurrentYear( program, true ),
-            Integer.class ) ).thenReturn( Lists.newArrayList( 2018, 2019 ) );
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
 
-        List<AnalyticsTable> tables = subject.getAnalyticsTables( params );
+    when(jdbcTemplate.queryForList(
+            getYearQueryForCurrentYear(program, true, availableDataYears), Integer.class))
+        .thenReturn(Lists.newArrayList(2018, 2019));
 
-        assertThat( tables, hasSize( 1 ) );
+    List<AnalyticsTable> tables = subject.getAnalyticsTables(params);
 
-        new AnalyticsTableAsserter.Builder( tables.get( 0 ) )
-            .withTableName( TABLE_PREFIX + program.getUid().toLowerCase() )
-            .withTableType( AnalyticsTableType.EVENT )
-            .withColumnSize( 62 )
-            .addColumns( periodColumns )
-            .addColumn( d1.getUid(), TEXT, toAlias( aliasD1, d1.getUid() ) ) // ValueType.TEXT
-            .addColumn( d2.getUid(), DOUBLE, toAlias( aliasD2, d2.getUid() ) ) // ValueType.PERCENTAGE
-            .addColumn( d3.getUid(), INTEGER, toAlias( aliasD3, d3.getUid() ) ) // ValueType.BOOLEAN
-            .addColumn( d4.getUid(), TIMESTAMP, toAlias( aliasD4, d4.getUid() ) ) // ValueType.DATE
-            .addColumn( d5.getUid(), TEXT, toAlias( aliasD5, d5.getUid() ) ) // ValueType.ORGANISATION_UNIT
-            .addColumn( d6.getUid(), BIGINT, toAlias( aliasD6, d6.getUid() ) ) // ValueType.INTEGER
-            .addColumn( d7.getUid(), GEOMETRY_POINT, toAlias( aliasD7, d7.getUid() ) ) // ValueType.COORDINATES
-            // element d5 also creates a Geo column
-            .addColumn( d5.getUid() + "_geom", GEOMETRY, toAlias( aliasD5_geo, d5.getUid() ), IndexType.GIST )
-            // element d5 also creates a Name column
-            .addColumn( d5.getUid() + "_name", TEXT, toAlias( aliasD5_name, d5.getUid() + "_name" ) )
-            .withDefaultColumns( subject.getFixedColumns() ).build().verify();
-    }
+    assertThat(tables, hasSize(1));
 
-    @Test
-    void verifyGetTableWithTrackedEntityAttribute()
-    {
-        when( databaseInfo.isSpatialSupport() ).thenReturn( true );
-        Program program = createProgram( 'A' );
+    new AnalyticsTableAsserter.Builder(tables.get(0))
+        .withTableName(TABLE_PREFIX + program.getUid().toLowerCase())
+        .withTableType(AnalyticsTableType.EVENT)
+        .withColumnSize(63)
+        .addColumns(periodColumns)
+        .addColumn(d1.getUid(), TEXT, toAlias(aliasD1, d1.getUid())) // ValueType.TEXT
+        .addColumn(d2.getUid(), DOUBLE, toAlias(aliasD2, d2.getUid())) // ValueType.PERCENTAGE
+        .addColumn(d3.getUid(), INTEGER, toAlias(aliasD3, d3.getUid())) // ValueType.BOOLEAN
+        .addColumn(d4.getUid(), TIMESTAMP, toAlias(aliasD4, d4.getUid())) // ValueType.DATE
+        .addColumn(d5.getUid(), TEXT, toAlias(aliasD5, d5.getUid())) // ValueType.ORGANISATION_UNIT
+        .addColumn(d6.getUid(), BIGINT, toAlias(aliasD6, d6.getUid())) // ValueType.INTEGER
+        .addColumn(
+            d7.getUid(), GEOMETRY_POINT, toAlias(aliasD7, d7.getUid())) // ValueType.COORDINATES
+        // element d5 also creates a Geo column
+        .addColumn(
+            d5.getUid() + "_geom", GEOMETRY, toAlias(aliasD5_geo, d5.getUid()), IndexType.GIST)
+        // element d5 also creates a Name column
+        .addColumn(d5.getUid() + "_name", TEXT, toAlias(aliasD5_name, d5.getUid() + "_name"))
+        .withDefaultColumns(subject.getFixedColumns())
+        .build()
+        .verify();
+  }
 
-        TrackedEntityAttribute tea1 = rnd.nextObject( TrackedEntityAttribute.class );
-        tea1.setValueType( ValueType.ORGANISATION_UNIT );
+  @Test
+  void verifyGetTableWithTrackedEntityAttribute() {
+    when(databaseInfo.isSpatialSupport()).thenReturn(true);
+    Program program = createProgram('A');
 
-        ProgramTrackedEntityAttribute tea = new ProgramTrackedEntityAttribute( program, tea1 );
+    TrackedEntityAttribute tea1 = rnd.nextObject(TrackedEntityAttribute.class);
+    tea1.setValueType(ValueType.ORGANISATION_UNIT);
 
-        program.setProgramAttributes( Collections.singletonList( tea ) );
+    ProgramTrackedEntityAttribute tea = new ProgramTrackedEntityAttribute(program, tea1);
 
-        DataElement d1 = createDataElement( 'Z', ValueType.TEXT, AggregationType.SUM );
+    program.setProgramAttributes(Collections.singletonList(tea));
 
-        ProgramStage ps1 = createProgramStage( 'A', Sets.newHashSet( d1 ) );
+    DataElement d1 = createDataElement('Z', ValueType.TEXT, AggregationType.SUM);
 
-        program.setProgramStages( Sets.newHashSet( ps1 ) );
+    ProgramStage ps1 = createProgramStage('A', Sets.newHashSet(d1));
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Lists.newArrayList( program ) );
+    program.setProgramStages(Sets.newHashSet(ps1));
 
-        String aliasD1 = "(select eventdatavalues #>> '{%s, value}' " + FROM_CLAUSE + " ) as \"%s\"";
-        String aliasTea1 = "(select %s from organisationunit ou where ou.uid = (select value from "
+    when(idObjectManager.getAllNoAcl(Program.class)).thenReturn(Lists.newArrayList(program));
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
+
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
+
+    String aliasD1 = "(select eventdatavalues #>> '{%s, value}' " + FROM_CLAUSE + " ) as \"%s\"";
+    String aliasTea1 =
+        "(select %s from organisationunit ou where ou.uid = (select value from "
             + "trackedentityattributevalue where trackedentityinstanceid=pi.trackedentityinstanceid and "
             + "trackedentityattributeid=%d)) as \"%s\"";
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withLastYears( 2 )
-            .withStartTime( START_TIME ).withToday( today ).build();
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder()
+            .withLastYears(2)
+            .withStartTime(START_TIME)
+            .withToday(today)
+            .build();
 
-        when( jdbcTemplate.queryForList(
-            getYearQueryForCurrentYear( program, true ),
-            Integer.class ) ).thenReturn( Lists.newArrayList( 2018, 2019 ) );
+    when(jdbcTemplate.queryForList(
+            getYearQueryForCurrentYear(program, true, availableDataYears), Integer.class))
+        .thenReturn(Lists.newArrayList(2018, 2019));
 
-        List<AnalyticsTable> tables = subject.getAnalyticsTables( params );
+    List<AnalyticsTable> tables = subject.getAnalyticsTables(params);
 
-        assertThat( tables, hasSize( 1 ) );
+    assertThat(tables, hasSize(1));
 
-        new AnalyticsTableAsserter.Builder( tables.get( 0 ) )
-            .withTableName( TABLE_PREFIX + program.getUid().toLowerCase() )
-            .withTableType( AnalyticsTableType.EVENT )
-            .withColumnSize( 57 ).addColumns( periodColumns )
-            .addColumn( d1.getUid(), TEXT, toAlias( aliasD1, d1.getUid() ) ) // ValueType.TEXT
-            .addColumn( tea1.getUid(), TEXT, String.format( aliasTea1, "ou.uid", tea1.getId(), tea1.getUid() ) )
-            // Second Geometry column created from the OU column above
-            .addColumn( tea1.getUid() + "_geom", GEOMETRY,
-                String.format( aliasTea1, "ou.geometry", tea1.getId(), tea1.getUid() ), IndexType.GIST )
-            .addColumn( tea1.getUid() + "_name", TEXT,
-                String.format( aliasTea1, "ou.name", tea1.getId(), tea1.getUid() ) )
-            .withDefaultColumns( subject.getFixedColumns() ).build().verify();
-    }
+    new AnalyticsTableAsserter.Builder(tables.get(0))
+        .withTableName(TABLE_PREFIX + program.getUid().toLowerCase())
+        .withTableType(AnalyticsTableType.EVENT)
+        .withColumnSize(58)
+        .addColumns(periodColumns)
+        .addColumn(d1.getUid(), TEXT, toAlias(aliasD1, d1.getUid())) // ValueType.TEXT
+        .addColumn(
+            tea1.getUid(), TEXT, String.format(aliasTea1, "ou.uid", tea1.getId(), tea1.getUid()))
+        // Second Geometry column created from the OU column above
+        .addColumn(
+            tea1.getUid() + "_geom",
+            GEOMETRY,
+            String.format(aliasTea1, "ou.geometry", tea1.getId(), tea1.getUid()),
+            IndexType.GIST)
+        .addColumn(
+            tea1.getUid() + "_name",
+            TEXT,
+            String.format(aliasTea1, "ou.name", tea1.getId(), tea1.getUid()))
+        .withDefaultColumns(subject.getFixedColumns())
+        .build()
+        .verify();
+  }
 
-    @Test
-    void verifyDataElementTypeOrgUnitFetchesOuNameWhenPopulatingEventAnalyticsTable()
-    {
-        ArgumentCaptor<String> sql = ArgumentCaptor.forClass( String.class );
-        when( databaseInfo.isSpatialSupport() ).thenReturn( true );
-        Program programA = createProgram( 'A' );
+  @Test
+  void verifyDataElementTypeOrgUnitFetchesOuNameWhenPopulatingEventAnalyticsTable() {
+    ArgumentCaptor<String> sql = ArgumentCaptor.forClass(String.class);
+    when(databaseInfo.isSpatialSupport()).thenReturn(true);
+    Program programA = createProgram('A');
 
-        DataElement d5 = createDataElement( 'G', ValueType.ORGANISATION_UNIT, AggregationType.NONE );
+    DataElement d5 = createDataElement('G', ValueType.ORGANISATION_UNIT, AggregationType.NONE);
 
-        ProgramStage ps1 = createProgramStage( 'A', Sets.newHashSet( d5 ) );
+    ProgramStage ps1 = createProgramStage('A', Sets.newHashSet(d5));
 
-        programA.setProgramStages( Sets.newHashSet( ps1 ) );
+    programA.setProgramStages(Sets.newHashSet(ps1));
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Lists.newArrayList( programA ) );
+    when(idObjectManager.getAllNoAcl(Program.class)).thenReturn(Lists.newArrayList(programA));
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withLastYears( 2 )
-            .withStartTime( START_TIME ).withToday( today ).build();
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
 
-        when( jdbcTemplate.queryForList(
-            getYearQueryForCurrentYear( programA, true ),
-            Integer.class ) ).thenReturn( Lists.newArrayList( 2018, 2019 ) );
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder()
+            .withLastYears(2)
+            .withStartTime(START_TIME)
+            .withToday(today)
+            .build();
 
-        subject.populateTable( params,
-            PartitionUtils.getTablePartitions( subject.getAnalyticsTables( params ) ).get( 0 ) );
+    when(jdbcTemplate.queryForList(
+            getYearQueryForCurrentYear(programA, true, availableDataYears), Integer.class))
+        .thenReturn(Lists.newArrayList(2018, 2019));
 
-        verify( jdbcTemplate ).execute( sql.capture() );
+    subject.populateTable(
+        params, PartitionUtils.getTablePartitions(subject.getAnalyticsTables(params)).get(0));
 
-        String ouQuery = "(select ou.%s from organisationunit ou where ou.uid = " + "(select eventdatavalues #>> '{"
-            + d5.getUid() + ", value}' from programstageinstance where "
-            + "programstageinstanceid=psi.programstageinstanceid )) as \"" + d5.getUid() + "\"";
+    verify(jdbcTemplate).execute(sql.capture());
 
-        assertThat( sql.getValue(), containsString( String.format( ouQuery, "uid" ) ) );
-        assertThat( sql.getValue(), containsString( String.format( ouQuery, "name" ) ) );
-    }
+    String ouQuery =
+        "(select ou.%s from organisationunit ou where ou.uid = "
+            + "(select eventdatavalues #>> '{"
+            + d5.getUid()
+            + ", value}' from programstageinstance where "
+            + "programstageinstanceid=psi.programstageinstanceid )) as \""
+            + d5.getUid()
+            + "\"";
 
-    @Test
-    void verifyTeiTypeOrgUnitFetchesOuNameWhenPopulatingEventAnalyticsTable()
-    {
-        ArgumentCaptor<String> sql = ArgumentCaptor.forClass( String.class );
-        when( databaseInfo.isSpatialSupport() ).thenReturn( true );
-        Program programA = createProgram( 'A' );
+    assertThat(sql.getValue(), containsString(String.format(ouQuery, "uid")));
+    assertThat(sql.getValue(), containsString(String.format(ouQuery, "name")));
+  }
 
-        TrackedEntityAttribute tea = createTrackedEntityAttribute( 'a', ValueType.ORGANISATION_UNIT );
-        tea.setId( 9999 );
+  @Test
+  void verifyTeiTypeOrgUnitFetchesOuNameWhenPopulatingEventAnalyticsTable() {
+    ArgumentCaptor<String> sql = ArgumentCaptor.forClass(String.class);
+    when(databaseInfo.isSpatialSupport()).thenReturn(true);
+    Program programA = createProgram('A');
 
-        ProgramTrackedEntityAttribute programTrackedEntityAttribute = createProgramTrackedEntityAttribute( programA,
-            tea );
+    TrackedEntityAttribute tea = createTrackedEntityAttribute('a', ValueType.ORGANISATION_UNIT);
+    tea.setId(9999);
 
-        programA.setProgramAttributes( Lists.newArrayList( programTrackedEntityAttribute ) );
+    ProgramTrackedEntityAttribute programTrackedEntityAttribute =
+        createProgramTrackedEntityAttribute(programA, tea);
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Lists.newArrayList( programA ) );
+    programA.setProgramAttributes(Lists.newArrayList(programTrackedEntityAttribute));
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withLastYears( 2 )
-            .withStartTime( START_TIME ).withToday( today ).build();
+    when(idObjectManager.getAllNoAcl(Program.class)).thenReturn(Lists.newArrayList(programA));
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
 
-        when( jdbcTemplate.queryForList(
-            getYearQueryForCurrentYear( programA, true ),
-            Integer.class ) ).thenReturn( Lists.newArrayList( 2018, 2019 ) );
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
 
-        subject.populateTable( params,
-            PartitionUtils.getTablePartitions( subject.getAnalyticsTables( params ) ).get( 0 ) );
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder()
+            .withLastYears(2)
+            .withStartTime(START_TIME)
+            .withToday(today)
+            .build();
 
-        verify( jdbcTemplate ).execute( sql.capture() );
+    when(jdbcTemplate.queryForList(
+            getYearQueryForCurrentYear(programA, true, availableDataYears), Integer.class))
+        .thenReturn(Lists.newArrayList(2018, 2019));
 
-        String ouQuery = "(select ou.%s from organisationunit ou where ou.uid = "
+    subject.populateTable(
+        params, PartitionUtils.getTablePartitions(subject.getAnalyticsTables(params)).get(0));
+
+    verify(jdbcTemplate).execute(sql.capture());
+
+    String ouQuery =
+        "(select ou.%s from organisationunit ou where ou.uid = "
             + "(select value from trackedentityattributevalue where trackedentityinstanceid=pi.trackedentityinstanceid and "
-            + "trackedentityattributeid=9999)) as \"" + tea.getUid() + "\"";
+            + "trackedentityattributeid=9999)) as \""
+            + tea.getUid()
+            + "\"";
 
-        assertThat( sql.getValue(), containsString( String.format( ouQuery, "uid" ) ) );
-        assertThat( sql.getValue(), containsString( String.format( ouQuery, "name" ) ) );
-    }
+    assertThat(sql.getValue(), containsString(String.format(ouQuery, "uid")));
+    assertThat(sql.getValue(), containsString(String.format(ouQuery, "name")));
+  }
 
-    @Test
-    void verifyOrgUnitOwnershipJoinsWhenPopulatingEventAnalyticsTable()
-    {
-        // Given fixtures/expectations
-        ArgumentCaptor<String> sql = ArgumentCaptor.forClass( String.class );
-        when( databaseInfo.isSpatialSupport() ).thenReturn( true );
-        Program programA = createProgram( 'A' );
+  @Test
+  void verifyOrgUnitOwnershipJoinsWhenPopulatingEventAnalyticsTable() {
+    // Given fixtures/expectations
+    ArgumentCaptor<String> sql = ArgumentCaptor.forClass(String.class);
+    when(databaseInfo.isSpatialSupport()).thenReturn(true);
+    Program programA = createProgram('A');
 
-        TrackedEntityAttribute tea = createTrackedEntityAttribute( 'a', ValueType.ORGANISATION_UNIT );
-        tea.setId( 9999 );
+    TrackedEntityAttribute tea = createTrackedEntityAttribute('a', ValueType.ORGANISATION_UNIT);
+    tea.setId(9999);
 
-        ProgramTrackedEntityAttribute programTrackedEntityAttribute = createProgramTrackedEntityAttribute( programA,
-            tea );
+    ProgramTrackedEntityAttribute programTrackedEntityAttribute =
+        createProgramTrackedEntityAttribute(programA, tea);
 
-        programA.setProgramAttributes( Lists.newArrayList( programTrackedEntityAttribute ) );
+    programA.setProgramAttributes(Lists.newArrayList(programTrackedEntityAttribute));
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Lists.newArrayList( programA ) );
+    when(idObjectManager.getAllNoAcl(Program.class)).thenReturn(Lists.newArrayList(programA));
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withLastYears( 2 )
-            .withStartTime( START_TIME ).withToday( today ).build();
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
 
-        when( jdbcTemplate.queryForList( getYearQueryForCurrentYear( programA, true ), Integer.class ) )
-            .thenReturn( Lists.newArrayList( 2018, 2019 ) );
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder()
+            .withLastYears(2)
+            .withStartTime(START_TIME)
+            .withToday(today)
+            .build();
 
-        // When
-        subject.populateTable( params,
-            PartitionUtils.getTablePartitions( subject.getAnalyticsTables( params ) ).get( 0 ) );
+    when(jdbcTemplate.queryForList(
+            getYearQueryForCurrentYear(programA, true, availableDataYears), Integer.class))
+        .thenReturn(Lists.newArrayList(2018, 2019));
 
-        // Then
-        verify( jdbcTemplate ).execute( sql.capture() );
+    // When
+    subject.populateTable(
+        params, PartitionUtils.getTablePartitions(subject.getAnalyticsTables(params)).get(0));
 
-        String ouEnrollmentLeftJoin = "left join organisationunit enrollmentou on pi.organisationunitid=enrollmentou.organisationunitid";
-        String ouRegistrationLeftJoin = "left join organisationunit registrationou on tei.organisationunitid=registrationou.organisationunitid";
+    // Then
+    verify(jdbcTemplate).execute(sql.capture());
 
-        assertThat( sql.getValue(), containsString( ouEnrollmentLeftJoin ) );
-        assertThat( sql.getValue(), containsString( ouRegistrationLeftJoin ) );
-    }
+    String ouEnrollmentLeftJoin =
+        "left join organisationunit enrollmentou on pi.organisationunitid=enrollmentou.organisationunitid";
+    String ouRegistrationLeftJoin =
+        "left join organisationunit registrationou on tei.organisationunitid=registrationou.organisationunitid";
 
-    @Test
-    void verifyGetAnalyticsTableWithOuLevels()
-    {
-        List<OrganisationUnitLevel> ouLevels = rnd.objects( OrganisationUnitLevel.class, 2 )
-            .collect( Collectors.toList() );
-        Program programA = rnd.nextObject( Program.class );
-        programA.setId( 0 );
+    assertThat(sql.getValue(), containsString(ouEnrollmentLeftJoin));
+    assertThat(sql.getValue(), containsString(ouRegistrationLeftJoin));
+  }
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Collections.singletonList( programA ) );
-        when( organisationUnitService.getFilledOrganisationUnitLevels() ).thenReturn( ouLevels );
-        when( jdbcTemplate.queryForList(
-            "select temp.supportedyear from (select distinct extract(year from " + getDateLinkedToStatus()
+  @Test
+  void verifyGetAnalyticsTableWithOuLevels() {
+    List<OrganisationUnitLevel> ouLevels =
+        rnd.objects(OrganisationUnitLevel.class, 2).collect(Collectors.toList());
+    Program programA = rnd.nextObject(Program.class);
+    programA.setId(0);
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
+
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
+    int startYear = availableDataYears.get(0);
+    int latestYear = availableDataYears.get(availableDataYears.size() - 1);
+
+    when(idObjectManager.getAllNoAcl(Program.class))
+        .thenReturn(Collections.singletonList(programA));
+    when(organisationUnitService.getFilledOrganisationUnitLevels()).thenReturn(ouLevels);
+    when(jdbcTemplate.queryForList(
+            "select temp.supportedyear from (select distinct extract(year from "
+                + getDateLinkedToStatus()
                 + ") as supportedyear "
                 + "from programstageinstance psi inner join programinstance pi on psi.programinstanceid = pi.programinstanceid "
-                + "where psi.lastupdated <= '2019-08-01T00:00:00' and pi.programid = 0 and (" + getDateLinkedToStatus()
-                + ") is not null " + "and (" + getDateLinkedToStatus() + ") > '1000-01-01' and psi.deleted is false ) "
-                + "as temp where temp.supportedyear >= 1975 and temp.supportedyear <= " + LATEST_YEAR_SUPPORTED,
-            Integer.class ) ).thenReturn( Lists.newArrayList( 2018, 2019 ) );
+                + "where psi.lastupdated <= '2019-08-01T00:00:00' and pi.programid = 0 and ("
+                + getDateLinkedToStatus()
+                + ") is not null "
+                + "and ("
+                + getDateLinkedToStatus()
+                + ") > '1000-01-01' and psi.deleted is false ) "
+                + "as temp where temp.supportedyear >= "
+                + startYear
+                + " and temp.supportedyear <= "
+                + latestYear,
+            Integer.class))
+        .thenReturn(Lists.newArrayList(2018, 2019));
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withStartTime( START_TIME ).build();
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder().withStartTime(START_TIME).build();
 
-        List<AnalyticsTable> tables = subject.getAnalyticsTables( params );
+    List<AnalyticsTable> tables = subject.getAnalyticsTables(params);
 
-        assertThat( tables, hasSize( 1 ) );
+    assertThat(tables, hasSize(1));
 
-        new AnalyticsTableAsserter.Builder( tables.get( 0 ) )
-            .withTableName( TABLE_PREFIX + programA.getUid().toLowerCase() ).withTableType( AnalyticsTableType.EVENT )
-            .withColumnSize( subject.getFixedColumns().size() + PeriodType.getAvailablePeriodTypes().size()
-                + ouLevels.size() + (programA.isRegistration() ? 1 : 0) )
-            .addColumns( periodColumns ).withDefaultColumns( subject.getFixedColumns() )
-            .addColumn( quote( "uidlevel" + ouLevels.get( 0 ).getLevel() ), col -> match( ouLevels.get( 0 ), col ) )
-            .addColumn( quote( "uidlevel" + ouLevels.get( 1 ).getLevel() ), col -> match( ouLevels.get( 1 ), col ) )
-            .build().verify();
-    }
+    new AnalyticsTableAsserter.Builder(tables.get(0))
+        .withTableName(TABLE_PREFIX + programA.getUid().toLowerCase())
+        .withTableType(AnalyticsTableType.EVENT)
+        .withColumnSize(
+            subject.getFixedColumns().size()
+                + PeriodType.getAvailablePeriodTypes().size()
+                + ouLevels.size()
+                + (programA.isRegistration() ? 1 : 0))
+        .addColumns(periodColumns)
+        .withDefaultColumns(subject.getFixedColumns())
+        .addColumn(
+            quote("uidlevel" + ouLevels.get(0).getLevel()), col -> match(ouLevels.get(0), col))
+        .addColumn(
+            quote("uidlevel" + ouLevels.get(1).getLevel()), col -> match(ouLevels.get(1), col))
+        .build()
+        .verify();
+  }
 
-    @Test
-    void verifyGetAnalyticsTableWithOuGroupSet()
-    {
-        List<OrganisationUnitGroupSet> ouGroupSet = rnd.objects( OrganisationUnitGroupSet.class, 2 )
-            .collect( Collectors.toList() );
-        Program programA = rnd.nextObject( Program.class );
-        programA.setId( 0 );
+  @Test
+  void verifyGetAnalyticsTableWithOuGroupSet() {
+    List<OrganisationUnitGroupSet> ouGroupSet =
+        rnd.objects(OrganisationUnitGroupSet.class, 2).collect(Collectors.toList());
+    Program programA = rnd.nextObject(Program.class);
+    programA.setId(0);
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Collections.singletonList( programA ) );
-        when( idObjectManager.getDataDimensionsNoAcl( OrganisationUnitGroupSet.class ) ).thenReturn( ouGroupSet );
+    when(idObjectManager.getAllNoAcl(Program.class))
+        .thenReturn(Collections.singletonList(programA));
+    when(idObjectManager.getDataDimensionsNoAcl(OrganisationUnitGroupSet.class))
+        .thenReturn(ouGroupSet);
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withStartTime( START_TIME ).build();
-        when( jdbcTemplate.queryForList( getYearQueryForCurrentYear( programA, false ), Integer.class ) )
-            .thenReturn( Lists.newArrayList( 2018, 2019 ) );
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
 
-        List<AnalyticsTable> tables = subject.getAnalyticsTables( params );
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder().withStartTime(START_TIME).build();
+    when(jdbcTemplate.queryForList(
+            getYearQueryForCurrentYear(programA, false, availableDataYears), Integer.class))
+        .thenReturn(Lists.newArrayList(2018, 2019));
 
-        assertThat( tables, hasSize( 1 ) );
+    List<AnalyticsTable> tables = subject.getAnalyticsTables(params);
 
-        new AnalyticsTableAsserter.Builder( tables.get( 0 ) )
-            .withTableName( TABLE_PREFIX + programA.getUid().toLowerCase() ).withTableType( AnalyticsTableType.EVENT )
-            .withColumnSize( subject.getFixedColumns().size() + PeriodType.getAvailablePeriodTypes().size()
-                + ouGroupSet.size() + (programA.isRegistration() ? 1 : 0) )
-            .addColumns( periodColumns ).withDefaultColumns( subject.getFixedColumns() )
-            .addColumn( quote( ouGroupSet.get( 0 ).getUid() ), col -> match( ouGroupSet.get( 0 ), col ) )
-            .addColumn( quote( ouGroupSet.get( 1 ).getUid() ), col -> match( ouGroupSet.get( 1 ), col ) ).build()
-            .verify();
-    }
+    assertThat(tables, hasSize(1));
 
-    @Test
-    void verifyGetAnalyticsTableWithOptionGroupSets()
-    {
-        List<CategoryOptionGroupSet> cogs = rnd.objects( CategoryOptionGroupSet.class, 2 )
-            .collect( Collectors.toList() );
-        Program programA = rnd.nextObject( Program.class );
-        programA.setId( 0 );
+    new AnalyticsTableAsserter.Builder(tables.get(0))
+        .withTableName(TABLE_PREFIX + programA.getUid().toLowerCase())
+        .withTableType(AnalyticsTableType.EVENT)
+        .withColumnSize(
+            subject.getFixedColumns().size()
+                + PeriodType.getAvailablePeriodTypes().size()
+                + ouGroupSet.size()
+                + (programA.isRegistration() ? 1 : 0))
+        .addColumns(periodColumns)
+        .withDefaultColumns(subject.getFixedColumns())
+        .addColumn(quote(ouGroupSet.get(0).getUid()), col -> match(ouGroupSet.get(0), col))
+        .addColumn(quote(ouGroupSet.get(1).getUid()), col -> match(ouGroupSet.get(1), col))
+        .build()
+        .verify();
+  }
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Collections.singletonList( programA ) );
-        when( categoryService.getAttributeCategoryOptionGroupSetsNoAcl() ).thenReturn( cogs );
-        when( jdbcTemplate.queryForList( getYearQueryForCurrentYear( programA, false ), Integer.class ) )
-            .thenReturn( Lists.newArrayList( 2018, 2019 ) );
+  @Test
+  void verifyGetAnalyticsTableWithOptionGroupSets() {
+    List<CategoryOptionGroupSet> cogs =
+        rnd.objects(CategoryOptionGroupSet.class, 2).collect(Collectors.toList());
+    Program programA = rnd.nextObject(Program.class);
+    programA.setId(0);
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withStartTime( START_TIME ).build();
+    when(idObjectManager.getAllNoAcl(Program.class))
+        .thenReturn(Collections.singletonList(programA));
+    when(categoryService.getAttributeCategoryOptionGroupSetsNoAcl()).thenReturn(cogs);
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
 
-        List<AnalyticsTable> tables = subject.getAnalyticsTables( params );
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
 
-        assertThat( tables, hasSize( 1 ) );
+    when(jdbcTemplate.queryForList(
+            getYearQueryForCurrentYear(programA, false, availableDataYears), Integer.class))
+        .thenReturn(Lists.newArrayList(2018, 2019));
 
-        new AnalyticsTableAsserter.Builder( tables.get( 0 ) )
-            .withTableName( TABLE_PREFIX + programA.getUid().toLowerCase() ).withTableType( AnalyticsTableType.EVENT )
-            .withColumnSize( subject.getFixedColumns().size() + PeriodType.getAvailablePeriodTypes().size()
-                + cogs.size() + (programA.isRegistration() ? 1 : 0) )
-            .addColumns( periodColumns ).withDefaultColumns( subject.getFixedColumns() )
-            .addColumn( quote( cogs.get( 0 ).getUid() ), col -> match( cogs.get( 0 ), col ) )
-            .addColumn( quote( cogs.get( 1 ).getUid() ), col -> match( cogs.get( 1 ), col ) ).build().verify();
-    }
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder().withStartTime(START_TIME).build();
 
-    private void match( OrganisationUnitGroupSet ouGroupSet, AnalyticsTableColumn col )
-    {
-        String name = quote( ouGroupSet.getUid() );
-        assertNotNull( col );
-        assertThat( col.getAlias(), is( "ougs." + name ) );
-        match( col );
-    }
+    List<AnalyticsTable> tables = subject.getAnalyticsTables(params);
 
-    private void match( OrganisationUnitLevel ouLevel, AnalyticsTableColumn col )
-    {
-        String name = quote( "uidlevel" + ouLevel.getLevel() );
-        assertNotNull( col );
-        assertThat( col.getAlias(), is( "ous." + name ) );
-        match( col );
-    }
+    assertThat(tables, hasSize(1));
 
-    private void match( CategoryOptionGroupSet cog, AnalyticsTableColumn col )
-    {
-        String name = quote( cog.getUid() );
-        assertNotNull( col );
-        assertThat( col.getAlias(), is( "acs." + name ) );
-        match( col );
-    }
+    new AnalyticsTableAsserter.Builder(tables.get(0))
+        .withTableName(TABLE_PREFIX + programA.getUid().toLowerCase())
+        .withTableType(AnalyticsTableType.EVENT)
+        .withColumnSize(
+            subject.getFixedColumns().size()
+                + PeriodType.getAvailablePeriodTypes().size()
+                + cogs.size()
+                + (programA.isRegistration() ? 1 : 0))
+        .addColumns(periodColumns)
+        .withDefaultColumns(subject.getFixedColumns())
+        .addColumn(quote(cogs.get(0).getUid()), col -> match(cogs.get(0), col))
+        .addColumn(quote(cogs.get(1).getUid()), col -> match(cogs.get(1), col))
+        .build()
+        .verify();
+  }
 
-    private void match( AnalyticsTableColumn col )
-    {
-        assertNotNull( col.getCreated() );
-        assertThat( col.getDataType(), is( CHARACTER_11 ) );
-        assertThat( col.isSkipIndex(), is( false ) );
-        assertThat( col.getNotNull(), is( ColumnNotNullConstraint.NULL ) );
-        assertThat( col.getIndexColumns(), hasSize( 0 ) );
-    }
+  @Test
+  void verifyAnalyticsEventTableHasDefaultPartition() {
+    Program program = createProgram('A');
+    when(idObjectManager.getAllNoAcl(Program.class)).thenReturn(List.of(program));
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2021, 2022, 2023, 2024, 2025));
 
-    private String quote( String string )
-    {
-        return "\"" + string + "\"";
-    }
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
 
-    @Test
-    void verifyTeaTypeOrgUnitFetchesOuNameWhenPopulatingEventAnalyticsTable()
-    {
-        ArgumentCaptor<String> sql = ArgumentCaptor.forClass( String.class );
-        when( databaseInfo.isSpatialSupport() ).thenReturn( true );
-        Program programA = createProgram( 'A' );
+    when(jdbcTemplate.queryForList(
+            getYearQueryForCurrentYear(program, true, availableDataYears), Integer.class))
+        .thenReturn(List.of());
 
-        TrackedEntityAttribute tea = createTrackedEntityAttribute( 'a', ValueType.ORGANISATION_UNIT );
-        tea.setId( 9999 );
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder()
+            .withLastYears(2)
+            .withStartTime(START_TIME)
+            .withToday(today)
+            .build();
 
-        ProgramTrackedEntityAttribute programTrackedEntityAttribute = createProgramTrackedEntityAttribute( programA,
-            tea );
+    List<AnalyticsTable> tables = subject.getAnalyticsTables(params);
 
-        programA.setProgramAttributes( Lists.newArrayList( programTrackedEntityAttribute ) );
+    assertThat(tables, hasSize(1));
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Lists.newArrayList( programA ) );
+    assertThat(tables.get(0).getTablePartitions().get(0).getYear(), equalTo(Year.now().getValue()));
+  }
 
-        when( jdbcTemplate.queryForList(
-            "select temp.supportedyear from (select distinct extract(year from " + getDateLinkedToStatus()
+  private void match(OrganisationUnitGroupSet ouGroupSet, AnalyticsTableColumn col) {
+    String name = quote(ouGroupSet.getUid());
+    assertNotNull(col);
+    assertThat(col.getAlias(), is("ougs." + name));
+    match(col);
+  }
+
+  private void match(OrganisationUnitLevel ouLevel, AnalyticsTableColumn col) {
+    String name = quote("uidlevel" + ouLevel.getLevel());
+    assertNotNull(col);
+    assertThat(col.getAlias(), is("ous." + name));
+    match(col);
+  }
+
+  private void match(CategoryOptionGroupSet cog, AnalyticsTableColumn col) {
+    String name = quote(cog.getUid());
+    assertNotNull(col);
+    assertThat(col.getAlias(), is("acs." + name));
+    match(col);
+  }
+
+  private void match(AnalyticsTableColumn col) {
+    assertNotNull(col.getCreated());
+    assertThat(col.getDataType(), is(CHARACTER_11));
+    assertThat(col.isSkipIndex(), is(false));
+    assertThat(col.getNotNull(), is(ColumnNotNullConstraint.NULL));
+    assertThat(col.getIndexColumns(), hasSize(0));
+  }
+
+  private String quote(String string) {
+    return "\"" + string + "\"";
+  }
+
+  @Test
+  void verifyTeaTypeOrgUnitFetchesOuNameWhenPopulatingEventAnalyticsTable() {
+    ArgumentCaptor<String> sql = ArgumentCaptor.forClass(String.class);
+    when(databaseInfo.isSpatialSupport()).thenReturn(true);
+    Program programA = createProgram('A');
+
+    TrackedEntityAttribute tea = createTrackedEntityAttribute('a', ValueType.ORGANISATION_UNIT);
+    tea.setId(9999);
+
+    ProgramTrackedEntityAttribute programTrackedEntityAttribute =
+        createProgramTrackedEntityAttribute(programA, tea);
+
+    programA.setProgramAttributes(Lists.newArrayList(programTrackedEntityAttribute));
+
+    when(idObjectManager.getAllNoAcl(Program.class)).thenReturn(Lists.newArrayList(programA));
+    when(periodDataProvider.getAvailableYears()).thenReturn(List.of(2018, 2019, now().getYear()));
+
+    List<Integer> availableDataYears = periodDataProvider.getAvailableYears();
+    int startYear = availableDataYears.get(0);
+    int latestYear = availableDataYears.get(availableDataYears.size() - 1);
+
+    when(jdbcTemplate.queryForList(
+            "select temp.supportedyear from (select distinct extract(year from "
+                + getDateLinkedToStatus()
                 + ") as supportedyear "
                 + "from programstageinstance psi inner join programinstance pi on psi.programinstanceid = pi.programinstanceid "
-                + "where psi.lastupdated <= '2019-08-01T00:00:00' and pi.programid = 0 and (" + getDateLinkedToStatus()
-                + ") is not null " + "and (" + getDateLinkedToStatus()
-                + ") > '1000-01-01' and psi.deleted is false and (" + getDateLinkedToStatus() + ") >= '2018-01-01') "
-                + "as temp where temp.supportedyear >= 1975 and temp.supportedyear <= " + LATEST_YEAR_SUPPORTED,
-            Integer.class ) ).thenReturn( Lists.newArrayList( 2018, 2019 ) );
+                + "where psi.lastupdated <= '2019-08-01T00:00:00' and pi.programid = 0 and ("
+                + getDateLinkedToStatus()
+                + ") is not null "
+                + "and ("
+                + getDateLinkedToStatus()
+                + ") > '1000-01-01' and psi.deleted is false and ("
+                + getDateLinkedToStatus()
+                + ") >= '2018-01-01') "
+                + "as temp where temp.supportedyear >= "
+                + startYear
+                + " and temp.supportedyear <= "
+                + latestYear,
+            Integer.class))
+        .thenReturn(Lists.newArrayList(2018, 2019));
 
-        AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withLastYears( 2 )
-            .withStartTime( START_TIME ).withToday( today ).build();
+    AnalyticsTableUpdateParams params =
+        AnalyticsTableUpdateParams.newBuilder()
+            .withLastYears(2)
+            .withStartTime(START_TIME)
+            .withToday(today)
+            .build();
 
-        subject.populateTable( params,
-            PartitionUtils.getTablePartitions( subject.getAnalyticsTables( params ) ).get( 0 ) );
+    subject.populateTable(
+        params, PartitionUtils.getTablePartitions(subject.getAnalyticsTables(params)).get(0));
 
-        verify( jdbcTemplate ).execute( sql.capture() );
+    verify(jdbcTemplate).execute(sql.capture());
 
-        final String ouQuery = "(select ou.%s from organisationunit ou where ou.uid = "
+    final String ouQuery =
+        "(select ou.%s from organisationunit ou where ou.uid = "
             + "(select value from trackedentityattributevalue where trackedentityinstanceid=pi.trackedentityinstanceid and "
-            + "trackedentityattributeid=9999)) as \"" + tea.getUid() + "\"";
+            + "trackedentityattributeid=9999)) as \""
+            + tea.getUid()
+            + "\"";
 
-        assertThat( sql.getValue(), containsString( String.format( ouQuery, "uid" ) ) );
-        assertThat( sql.getValue(), containsString( String.format( ouQuery, "name" ) ) );
-    }
+    assertThat(sql.getValue(), containsString(String.format(ouQuery, "uid")));
+    assertThat(sql.getValue(), containsString(String.format(ouQuery, "name")));
+  }
 
-    private String toAlias( String template, String uid )
-    {
-        return String.format( template, uid, uid, uid );
-    }
+  private String toAlias(String template, String uid) {
+    return String.format(template, uid, uid, uid);
+  }
 
-    private void addCategoryCombo( Program program, CategoryCombo categoryCombo )
-    {
-        program.setCategoryCombo( categoryCombo );
-    }
+  private void addCategoryCombo(Program program, CategoryCombo categoryCombo) {
+    program.setCategoryCombo(categoryCombo);
+  }
 
-    private String getYearQueryForCurrentYear( Program program, boolean withExecutionDate )
-    {
-        String sql = "select temp.supportedyear from (select distinct "
-            + "extract(year from " + getDateLinkedToStatus() + ") as supportedyear "
+  private String getYearQueryForCurrentYear(
+      Program program, boolean withExecutionDate, List<Integer> availableDataYears) {
+    int startYear = availableDataYears.get(0);
+    int latestYear = availableDataYears.get(availableDataYears.size() - 1);
+    String sql =
+        "select temp.supportedyear from (select distinct "
+            + "extract(year from "
+            + getDateLinkedToStatus()
+            + ") as supportedyear "
             + "from programstageinstance psi inner join "
             + "programinstance pi on psi.programinstanceid = pi.programinstanceid where psi.lastupdated <= '"
-            + "2019-08-01T00:00:00' and pi.programid = " + program.getId()
-            + " and (" + getDateLinkedToStatus()
-            + ") is not null and (" + getDateLinkedToStatus() + ") > '1000-01-01' and psi.deleted is false ";
+            + "2019-08-01T00:00:00' and pi.programid = "
+            + program.getId()
+            + " and ("
+            + getDateLinkedToStatus()
+            + ") is not null and ("
+            + getDateLinkedToStatus()
+            + ") > '1000-01-01' and psi.deleted is false ";
 
-        if ( withExecutionDate )
-        {
-            sql += "and (" + getDateLinkedToStatus() + ") >= '2018-01-01'";
-        }
-
-        sql += ") as temp where temp.supportedyear >= 1975 and temp.supportedyear <= " + LATEST_YEAR_SUPPORTED;
-
-        return sql;
+    if (withExecutionDate) {
+      sql += "and (" + getDateLinkedToStatus() + ") >= '2018-01-01'";
     }
 
-    private String getDateLinkedToStatus()
-    {
-        return "CASE WHEN 'SCHEDULE' = psi.status THEN psi.duedate ELSE psi.executiondate END";
-    }
+    sql +=
+        ") as temp where temp.supportedyear >= "
+            + startYear
+            + " and temp.supportedyear <= "
+            + latestYear;
+
+    return sql;
+  }
+
+  private String getDateLinkedToStatus() {
+    return "CASE WHEN 'SCHEDULE' = psi.status THEN psi.duedate ELSE psi.executiondate END";
+  }
 }
